Bug 1594284 - Remove nsDocShell::CanAccessItem. r=annyG

Apparently Bug 1594288 removed the user of this function.

Differential Revision: https://phabricator.services.mozilla.com/D57226

--HG--
extra : moz-landing-system : lando